# AoC

./: .gitignore  Cargo.toml  session_token.txt
aocinput/: Cargo.toml
aocinput/src/: crypt.rs  lib.rs  load_session.rs  request.rs  user.rs
input/: Cargo.toml
input/src/: io.rs  main.rs
xmas2019/: Cargo.toml
xmas2020/: Cargo.toml
