[package]
name = "xmas2020"
version = "0.1.0"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aocinput = { path = "../aocinput" }
itertools = "0.9.0"
ndarray = "0.14.0"
